--- a/index.html
+++ b/index.html
@@ -14,23 +14,23 @@
   <!-- Open Graph -->
   <meta property="og:title" content="Avios AI — Production AI that delivers results" />
   <meta property="og:description" content="Reliable AI automation, NLP copilots, and multimodal systems that improve productivity and deliver measurable ROI." />
-  <meta property="og:image" content="https://vineeth2002.github.io/Avios-AI/assets/hero-image_v2.png" />
+  <!-- OG image uses hero-image.png you already have in assets/ -->
+  <meta property="og:image" content="https://vineeth2002.github.io/Avios-AI/assets/hero-image.png" />
   <meta property="og:url" content="https://vineeth2002.github.io/Avios-AI/" />
   <meta property="og:type" content="website" />
   <meta name="twitter:card" content="summary_large_image" />
 
-  <!-- Favicon -->
-  <link rel="icon" href="assets/favicon.ico" type="image/x-icon" />
+  <!-- Inline SVG favicon (works immediately) -->
+  <link rel="icon" href="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect rx='18' width='100' height='100' fill='%23023b6a'/><text x='50' y='62' font-family='Inter,Arial,sans-serif' font-weight='700' font-size='56' fill='%23ffffff' text-anchor='middle'>A</text></svg>" type="image/svg+xml">
 
-  <!-- Fonts & UI (Tailwind used via CDN) -->
+  <!-- Fonts & Tailwind -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
 
   <style>
-    /* Base (Ultra-minimal + corporate) */
     :root{
-      --bg:#0b1220;
+      --bg:#07131f;
       --card:#0f1724;
       --muted:#9aa4b2;
       --accent:#0ea5ff;
@@ -45,15 +45,15 @@
 
     /* Header */
     header{position:fixed;top:0;left:0;right:0;z-index:60;background:linear-gradient(180deg, rgba(2,6,23,0.6), rgba(2,6,23,0.2));backdrop-filter:blur(8px);border-bottom:1px solid rgba(255,255,255,0.03)}
-    .nav{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
+    .nav{display:flex;align-items:center;justify-content:space-between;padding:12px 0}
     .brand{display:flex;align-items:center;gap:10px;font-weight:700}
-    .brand img{width:38px;height:38px;border-radius:8px;object-fit:cover}
+    .brand svg{width:40px;height:40px;border-radius:8px;background:transparent}
     .nav-links{display:flex;gap:18px;align-items:center}
     .nav-links a{font-weight:600;color:rgba(255,255,255,0.92);text-decoration:none}
-    .nav-cta{padding:10px 16px;border-radius:10px;background:linear-gradient(90deg,var(--accent),#7dd3fc);color:#032; font-weight:800;box-shadow:0 10px 30px rgba(6,78,120,0.12)}
+    .nav-cta{padding:10px 16px;border-radius:10px;background:linear-gradient(90deg,var(--accent),#7dd3fc);color:#022;font-weight:800;box-shadow:0 10px 30px rgba(6,78,120,0.12)}
 
     /* Hero */
-    .hero{position:relative;min-height:82vh;display:flex;align-items:center;justify-content:center;padding-top:60px}
+    .hero{position:relative;min-height:82vh;display:flex;align-items:center;justify-content:center;padding-top:64px}
     .hero-inner{position:relative;z-index:2;max-width:1050px;display:grid;grid-template-columns:1fr 420px;gap:36px;align-items:center;padding:28px 20px}
     @media(max-width:960px){ .hero-inner{grid-template-columns:1fr; text-align:center} .hero .visual{order:-1} }
     .hero-title{font-weight:800;font-size:clamp(28px,4.5vw,44px);line-height:1.02;margin:0 0 12px}
@@ -67,15 +67,14 @@
     .visual h4{margin:0 0 8px;font-size:1.05rem}
     .visual p{margin:0;color:var(--muted);font-size:0.95rem}
 
-    /* Features, services */
+    /* Sections */
     section{padding:48px 0}
     .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:18px}
     @media(max-width:960px){ .grid-3{grid-template-columns:1fr} }
 
     .card{background:var(--card);border-radius:12px;padding:18px;border:1px solid var(--glass)}
 
-    /* Testimonials — centered, clean */
-    .test-wrapper{display:flex;justify-content:center;align-items:center}
+    /* Testimonials */
     .testimonial{max-width:720px;padding:22px;border-radius:12px;background:linear-gradient(180deg,rgba(255,255,255,0.02), rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.04)}
     .testimonial p{margin:0;color:var(--muted);font-style:italic}
     .testimonial cite{display:block;margin-top:12px;font-weight:700;color:var(--white)}
@@ -88,22 +87,33 @@
     textarea{min-height:140px;resize:vertical}
     .submit-btn{background:linear-gradient(90deg,var(--accent),var(--accent-dark));padding:12px 16px;border-radius:10px;border:none;color:#042;cursor:pointer;font-weight:800}
 
-    /* Floating sticky contact for conversion */
+    /* Sticky CTA */
     .sticky-contact{position:fixed;right:18px;bottom:18px;background:linear-gradient(90deg,var(--accent),#7dd3fc);padding:10px 14px;border-radius:999px;color:#022;font-weight:800;box-shadow:0 10px 30px rgba(6,78,120,0.12);z-index:80}
     @media(max-width:560px){ .sticky-contact{right:10px;bottom:10px;padding:10px} }
 
     footer{padding:28px 0;text-align:center;color:var(--muted);font-size:0.95rem;border-top:1px solid rgba(255,255,255,0.02)}
+    .muted{color:var(--muted)}
   </style>
 </head>
 <body>
-
   <!-- Header -->
   <header>
     <div class="container nav">
-      <div class="brand">
-        <img src="assets/favicon.png" alt="Avios logo" />
+      <div class="brand" aria-label="Avios AI logo and name">
+        <!-- Inline SVG logo (clean, sharp). You can replace later with png/ico -->
+        <svg viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" role="img" aria-hidden="false" style="width:40px;height:40px;border-radius:8px;background:transparent">
+          <defs>
+            <linearGradient id="g1" x1="0" x2="1" y1="0" y2="1">
+              <stop offset="0" stop-color="#0ea5ff"/>
+              <stop offset="1" stop-color="#0369a1"/>
+            </linearGradient>
+          </defs>
+          <rect rx="18" width="100" height="100" fill="url(#g1)"/>
+          <text x="50" y="62" font-family="Inter, Arial, sans-serif" font-weight="700" font-size="56" fill="#fff" text-anchor="middle">A</text>
+        </svg>
         <div>Avios AI</div>
       </div>
+
       <nav class="nav-links" aria-label="Main navigation">
         <a href="#services">Services</a>
         <a href="#features">Features</a>
@@ -125,38 +135,65 @@
 
           <div class="cta-row" role="group" aria-label="Primary CTAs">
             <a href="#contact" class="nav-cta">Get a free consultation</a>
-            <a href="#services" class="btn-primary" style="display:inline-block">See services</a>
+            <a href="#services" class="submit-btn" style="background:linear-gradient(90deg,var(--accent),#7dd3fc);color:#042">See services</a>
           </div>
 
-          <div style="margin-top:14px;color:var(--muted);font-size:0.95rem">
-            Fast PoC • Production deployment • Ongoing support
-          </div>
+          <div style="margin-top:14px;color:var(--muted);font-size:0.95rem">Fast PoC • Production deployment • Ongoing support</div>
         </div>
 
         <aside class="visual" aria-hidden="false">
-          <img src="assets/hero-image_v2.png" alt="Avios AI hero visual">
-          <h4>Trusted approach</h4>
-          <p>We run a focused PoC, measure impact, then scale—no long unfocused engagements.</p>
+          <!-- prefer hero-image.png (you said you have it) -->
+          <img src="assets/hero-image.png" alt="Avios AI hero visual">
+          <h4>Approach that converts</h4>
+          <p class="muted">We run a focused PoC, measure impact, then scale—no long unfocused engagements.</p>
+        </aside>
+      </div>
+    </section>
+
+    <!-- About / Why Avios -->
+    <section id="about" class="container">
+      <h2 style="text-align:center;margin-bottom:10px;font-size:1.5rem">About Avios AI</h2>
+      <div style="display:grid;grid-template-columns:1fr 360px;gap:22px;align-items:start">
+        <div class="card">
+          <h3 style="margin-top:0">What we do</h3>
+          <p class="muted">Avios builds production-ready AI systems for businesses: automation pipelines, NLP copilots, and multimodal interfaces that solve real problems — not just demos.</p>
+
+          <h4 style="margin-top:16px">Mission</h4>
+          <p class="muted">Make advanced AI practical and measurable for teams of any size.</p>
+
+          <h4 style="margin-top:12px">Vision</h4>
+          <p class="muted">AI that reliably augments teams, reduces repetitive work and unlocks new products.</p>
+
+          <h4 style="margin-top:12px">How we work</h4>
+          <ul style="margin-left:18px;color:var(--muted)">
+            <li>Discovery call — define key metrics</li>
+            <li>Fast PoC focused on measurable KPIs</li>
+            <li>Production rollout + monitoring</li>
+          </ul>
+        </div>
+
+        <aside class="card">
+          <h4 style="margin-top:0">Quick facts</h4>
+          <ul style="margin-left:18px;color:var(--muted)">
+            <li>PoC in 1–2 weeks</li>
+            <li>Production rollouts with monitoring</li>
+            <li>Data privacy & secure deployment</li>
+          </ul>
+          <div style="margin-top:12px">
+            <strong>Ready to start?</strong>
+            <div style="margin-top:10px"><a href="#contact" class="nav-cta">Book a free call</a></div>
+          </div>
         </aside>
       </div>
     </section>
 
     <!-- Services -->
     <section id="services" class="container">
-      <h2 style="text-align:center;margin-bottom:10px;font-size:1.5rem">Services built for business</h2>
+      <h2 style="text-align:center;margin-bottom:10px;font-size:1.3rem">Services built for business</h2>
       <div class="grid-3" style="margin-top:18px">
-        <div class="card">
-          <h3 style="margin-bottom:8px">AI Automation</h3>
-          <p class="muted">Automate manual workflows, document processing and reporting with auditable pipelines.</p>
-        </div>
-        <div class="card">
-          <h3 style="margin-bottom:8px">NLP Copilots</h3>
-          <p class="muted">Assistants for support, knowledge work, summaries and search — tailored to your data.</p>
-        </div>
-        <div class="card">
-          <h3 style="margin-bottom:8px">Multimodal Systems</h3>
-          <p class="muted">Combine text, image and audio inputs to create smarter user experiences and search.</p>
-        </div>
+        <div class="card"><h3>AI Automation</h3><p class="muted">Automate manual workflows, document processing and reporting with auditable pipelines.</p></div>
+        <div class="card"><h3>NLP Copilots</h3><p class="muted">Assistants for support, summarization, knowledge work and internal search — tailored to your data.</p></div>
+        <div class="card"><h3>Multimodal Systems</h3><p class="muted">Combine text, image and audio inputs to build smarter experiences.</p></div>
       </div>
     </section>
 
@@ -164,25 +201,16 @@
     <section id="features" class="container">
       <h2 style="text-align:center;margin-bottom:12px;font-size:1.3rem">Why teams choose Avios</h2>
       <div class="grid-3" style="margin-top:14px">
-        <div class="card">
-          <strong>Scalable</strong>
-          <p class="muted">Designs that scale from PoC to production.</p>
-        </div>
-        <div class="card">
-          <strong>Secure</strong>
-          <p class="muted">Data-first architecture with access controls and privacy protections.</p>
-        </div>
-        <div class="card">
-          <strong>Measurable</strong>
-          <p class="muted">We track KPIs and deliver fast ROI.</p>
-        </div>
+        <div class="card"><strong>Scalable</strong><p class="muted">Designs that scale from PoC to production.</p></div>
+        <div class="card"><strong>Secure</strong><p class="muted">Privacy-first architecture with access controls.</p></div>
+        <div class="card"><strong>Measurable</strong><p class="muted">We track KPIs and deliver tangible ROI.</p></div>
       </div>
     </section>
 
     <!-- Testimonials -->
     <section id="testimonials" class="container">
       <h2 style="text-align:center;margin-bottom:12px;font-size:1.3rem">Client feedback</h2>
-      <div class="test-wrapper" style="margin-top:18px">
+      <div style="display:flex;justify-content:center;margin-top:18px">
         <div class="swiper" style="width:100%;max-width:820px">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
@@ -214,7 +242,7 @@
       <h2 style="text-align:center;margin-bottom:12px;font-size:1.4rem">Request a free consultation</h2>
 
       <div class="contact-wrap" style="margin-top:18px">
-        <div class="card" style="padding:18px">
+        <div class="card">
           <form id="contact-form" novalidate>
             <label for="name">Name</label>
             <input id="name" name="name" type="text" placeholder="Your name" required>
@@ -241,7 +269,7 @@
         <aside class="card">
           <h3 style="margin-top:0">What we'll do next</h3>
           <ul style="margin:10px 0 0 18px;color:var(--muted);">
-            <li>15-min discovery call</li>
+            <li>15-minute discovery call</li>
             <li>Scope & fast PoC plan</li>
             <li>Production deployment & support</li>
           </ul>
@@ -253,10 +281,9 @@
         </aside>
       </div>
     </section>
-
   </main>
 
-  <!-- Sticky contact -->
+  <!-- Sticky CTA -->
   <a class="sticky-contact" href="#contact" aria-label="Contact us">Book Consult</a>
 
   <footer>
@@ -271,7 +298,9 @@
   <!-- Contact form (Apps Script webhook) -->
   <script>
   (function(){
+    // YOUR Apps Script exec URL (already deployed)
     const WEBAPP_URL = "https://script.google.com/macros/s/AKfycbye6WBe-sERGIk_PvApsCFrS46Dq0t0s2rvic0mduAn1iZY_q5J49jinkaHPneqXxY18Q/exec";
+
     const form = document.getElementById('contact-form');
     const status = document.getElementById('form-status');
     const fallback = document.getElementById('fallback-mailto');
@@ -287,14 +316,14 @@
       submitBtn.disabled = true;
       setStatus('Sending...');
 
-      const data = {
+      const payload = {
         name: form.name.value.trim(),
         email: form.email.value.trim(),
         company: form.company.value.trim(),
         message: form.message.value.trim()
       };
 
-      if(!data.name || !data.email || !data.message){
+      if(!payload.name || !payload.email || !payload.message){
         setStatus('Please complete name, email, and message.', true);
         submitBtn.disabled = false;
         return;
@@ -304,12 +333,12 @@
         const res = await fetch(WEBAPP_URL, {
           method: 'POST',
           headers: {'Content-Type':'application/json'},
-          body: JSON.stringify(data),
+          body: JSON.stringify(payload),
           mode: 'cors'
         });
 
         let json = null;
-        try{ json = await res.json(); } catch(e){}
+        try { json = await res.json(); } catch(e){}
 
         if(res.ok && json && json.success){
           setStatus('✅ Message sent — we will reply within one business day.');
@@ -332,7 +361,7 @@
   })();
   </script>
 
-  <!-- Testimonial swiper init -->
+  <!-- Swiper init -->
   <script>
     new Swiper('.swiper', {
       loop: true,
@@ -344,7 +373,7 @@
     });
   </script>
 
-  <!-- Minimal particle canvas (hero) -->
+  <!-- Minimal hero particles -->
   <script>
   (function(){
     const canvas = document.getElementById('hero-canvas');
@@ -377,7 +406,6 @@
       ctx.fillStyle = g;
       ctx.fillRect(0,0,w,h);
 
-      ctx.fillStyle = 'rgba(14,165,255,0.85)';
       for(let i=0;i<parts.length;i++){
         const p = parts[i];
         p.x += p.vx; p.y += p.vy;
@@ -385,10 +413,10 @@
         if(p.y < -20) p.y = h+20; if(p.y > h+20) p.y = -20;
 
         ctx.beginPath();
+        ctx.fillStyle = 'rgba(14,165,255,0.85)';
         ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
         ctx.fill();
 
-        // connect to near particles
         for(let j=i+1;j<parts.length;j++){
           const q = parts[j];
           const dx = p.x - q.x, dy = p.y - q.y;
